<resources>
    <string name="app_name">TUBES-P3B</string>
    <string name="app_info">App info</string>
    <string name="app_names">Rumah Sakit Sehat Selalu</string>
    <string name="app_title">Rumah Sakit Sehat Selalu</string>
    <string name="app_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, dolor sed consequat varius, arcu elit imperdiet sem, in ullamcorper est nulla eget ex. Etiam mollis lacus a faucibus posuere. Etiam imperdiet purus at nulla bibendum, et lacinia nisl sagittis. Ut quis velit laoreet, sodales mauris vitae, suscipit purus. Fusce ultricies erat porta mi fringilla tristique.</string>
    <string name="btn_buat_pertemuan">Buat Pertemuan</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_batal">Batal</string>
    <string name="app_daftardokter">Daftar Dokter</string>
    <string name="app_tambahdokter">Tambah Dokter</string>
    <string name="app_lihatdokter">Detail</string>
    <string name="app_buatpertemuan">Buat Pertemuan</string>
    <string name="app_editdokter">Edit</string>
    <string name="app_pengaturan">Setting</string>
    <string name="app_daftarpertemuan">Daftar Pertemuan</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="btn_plus">+</string>
    <string name="btn_delete">Hapus</string>


    <string name="nama">Nama</string>
    <string name="dokter">Dokter</string>
    <string name="keluhan">Keluhan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="nomorhp">No. HP</string>
    <string name="hubungi">Hubungi</string>
    <string name="bahasa">Bahasa</string>

    <string name="hintNama">Bernadus Raka</string>
    <string name="hintTanggal">15/10/22</string>
    <string name="hintJam">10:00</string>
    <string name="hintKeluhan">Sakit kepala, kunang-kunang</string>
    <string name="hintNomorHP">089646436360</string>
    <string name="hintDokterKategori">Jantung</string>

    <string name="home">Home</string>
    <string name="pertemuan">Pertemuan</string>
    <string name="daftarpertemuan">Daftar Pertemuan</string>
    <string name="exit">Exit</string>
    <string name="version_app">tubes1-B-1-K v1.0</string>

    <string-array name="bahasa_array">
        <item>Indonesia</item>
        <item>English</item>
    </string-array>
</resources>