<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home">

            </Button>

            <Button
                android:id="@+id/btn_dokter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dokter"
                >

            </Button>

            <Button
                android:id="@+id/btn_pertemuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pertemuan"
                >

            </Button>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                >

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_app"
                android:textAlignment="center"

                >

            </TextView>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>