<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="48sp"
                android:layout_marginBottom="96sp"
                android:text="@string/app_tambahdokter"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="178dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="136sp"
                android:text="@string/nama"
                android:textSize="18sp"
                >
            </TextView>

            <EditText
                android:layout_width="158sp"
                android:layout_height="wrap_content"
                android:hint="Bernadus Raka"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="132sp"
                android:layout_marginTop="6sp"
                android:text="@string/dokter"
                android:textSize="18sp">

            </TextView>

            <EditText
                android:layout_width="158sp"
                android:layout_height="wrap_content"
                android:hint="Umum"
                android:textStyle="italic">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="258dp"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="128sp"
                android:text="@string/nomorhp"
                android:textSize="18sp"

                >

            </TextView>

            <EditText
                android:layout_width="158sp"
                android:layout_height="wrap_content"
                android:hint="089646436360"
                android:textStyle="italic"
                android:inputType="number"
                >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:paddingBottom="40dp">

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="160sp"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_simpan"
                android:textAllCaps="false"
                android:textSize="12sp">

            </Button>
        </LinearLayout>




    </RelativeLayout>

</FrameLayout>