<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100sp"
                android:layout_marginTop="48sp"
                android:textStyle="bold"
                android:textSize="28dp"
                android:textAlignment="center"
                android:text="@string/app_title"
                android:textColor="@color/black">

            </TextView>

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36sp"
                android:layout_marginTop="108sp"
                android:layout_marginBottom="108sp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textAlignment="center"
                android:text="@string/app_detail"
                android:textColor="@color/black">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginTop="108sp"
            android:paddingBottom="40sp"
            >

            <Button
                android:id="@+id/btn_pertemuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_buat_pertemuan"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:width="160sp"
                android:background="@drawable/rounded_corner"
                >

            </Button>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>