<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="48sp"
                android:layout_marginBottom="96sp"
                android:text="@string/app_lihatdokter"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="178dp"
                android:paddingHorizontal="36dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="18sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/tv_namadokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bernadus Raka"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10sp"
                    android:textSize="18sp"
                    >
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:paddingHorizontal="36dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dokter"
                    android:textSize="18sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/tv_kategoridokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Umum"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10sp"
                    android:textSize="18sp"
                    >
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:paddingHorizontal="36dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nomorhp"
                    android:textSize="18sp"
                    >
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="-12dp"
                    >

                    <TextView
                        android:id="@+id/tv_nohp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="089646436360"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10sp"
                        android:textSize="18sp"
                        >
                    </TextView>

                    <Button
                        android:id="@+id/btn_hubungi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hubungi"
                        android:layout_marginLeft="104dp"
                        android:textColor="@color/primary_red"
                        android:layout_marginTop="9sp"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        >
                    </Button>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:paddingBottom="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="160sp"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_edit"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginRight="16dp">

            </Button>

            <Button
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="160sp"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_kembali"
                android:textAllCaps="false"
                android:textSize="12sp">

            </Button>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>