<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="48sp"
                android:layout_marginBottom="96sp"
                android:text="@string/app_pengaturan"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="35dp"
            android:layout_marginTop="215dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bahasa"
                >

            </TextView>

            <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/sp_dokter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:entries="@array/bahasa_array">

            </Spinner>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="140dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="App info"
                android:layout_marginBottom="10dp"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Rumah Sakit Sehat Selalu"
                android:textStyle="bold"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/version_app"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:paddingBottom="40dp">

            <Button
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="160sp"
                android:background="@drawable/rounded_corner"
                android:text="@string/btn_kembali"
                android:textAllCaps="false"
                android:textSize="12sp">

            </Button>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>